# temp

./: .gitignore  CMakeLists.txt  README.md  hello.hpp
.github/workflows/: build.yml  run-tests.yml
example/: CMakeLists.txt  hello_example.cpp
examples/: CMakeLists.txt
test/: CMakeLists.txt  hello_test.cpp  hello_test2.cpp
tests/: CMakeLists.txt  hello_test.cpp  hello_test_suite.cpp
